--- a/MCS_K8sEdge_Bernd_KLAUS.tex
+++ b/MCS_K8sEdge_Bernd_KLAUS.tex
@@ -2,7 +2,7 @@
 % !TEX encoding = UTF-8 Unicode
 %
 
-\documentclass[MIC,Master,english]{twbook}%\documentclass[Bachelor,BMR,ngerman]{twbook}
+\documentclass[Master,MCS,english]{twbook}%\documentclass[Bachelor,BMR,ngerman]{twbook}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 % BERND: Additional Pkg
